[gd_scene load_steps=36 format=3 uid="uid://dftcjax6axj8l"]

[ext_resource type="Script" path="res://scripts/sheriff/ViewSheriffController.gd" id="1_70v2j"]
[ext_resource type="PackedScene" uid="uid://lwtwqix0rrqa" path="res://prefabs/dialog.tscn" id="1_lj7xl"]
[ext_resource type="Texture2D" uid="uid://bp5btpw6lfsmq" path="res://sprites/screens/main/main.png" id="2_b6v87"]
[ext_resource type="Texture2D" uid="uid://c108i6g3a2lf3" path="res://sprites/items/walkie.png" id="3_c25gc"]
[ext_resource type="Script" path="res://scripts/sheriff/WalkieController.gd" id="4_3x8v0"]
[ext_resource type="Script" path="res://scripts/sheriff/EndButtonController.gd" id="6_g8p5y"]
[ext_resource type="Theme" uid="uid://ms88awncv3el" path="res://fonts/theme_main_menu.tres" id="7_c2jop"]
[ext_resource type="Texture2D" uid="uid://fn603sg46ixh" path="res://sprites/gui/boxes/box_export.png" id="7_pdjr6"]
[ext_resource type="AudioStream" uid="uid://bhtyievaha1og" path="res://audio/sfx/button_click.wav" id="8_fjtla"]
[ext_resource type="AudioStream" uid="uid://bl7m17s65bljr" path="res://audio/sfx/button_hover.wav" id="9_p6nk5"]
[ext_resource type="PackedScene" uid="uid://gim0m8uh1ulm" path="res://prefabs/glitch_plus.tscn" id="10_5duty"]
[ext_resource type="Texture2D" uid="uid://b77iqmpnw0hrr" path="res://sprites/gui/boxes/box_restart.png" id="12_jbx6p"]

[sub_resource type="Animation" id="Animation_032re"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(831, 898)]
}

[sub_resource type="Animation" id="Animation_cg4yn"]
resource_name = "hang"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(819, 454), Vector2(825, 684)]
}

[sub_resource type="Animation" id="Animation_xyvfm"]
resource_name = "raise"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(826, 891), Vector2(819, 454)]
}

[sub_resource type="Animation" id="Animation_te3sn"]
resource_name = "unhang"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(825, 684), Vector2(819, 454)]
}

[sub_resource type="Animation" id="Animation_y03s7"]
resource_name = "unraise"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(819, 454), Vector2(819, 927)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jkge"]
_data = {
"RESET": SubResource("Animation_032re"),
"hang": SubResource("Animation_cg4yn"),
"raise": SubResource("Animation_xyvfm"),
"unhang": SubResource("Animation_te3sn"),
"unraise": SubResource("Animation_y03s7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sy3nr"]
size = Vector2(31.2809, 76.0772)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_saxfb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i0f08"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6xx06"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qef7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xjurt"]

[sub_resource type="Animation" id="Animation_d6add"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(419, 249)]
}

[sub_resource type="Animation" id="Animation_7q4jq"]
resource_name = "rise"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(419, 661), Vector2(419, 249)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gnppy"]
_data = {
"RESET": SubResource("Animation_d6add"),
"rise": SubResource("Animation_7q4jq")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mau5j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_285m2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfxlm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1m137"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o1idm"]

[sub_resource type="Animation" id="Animation_mjghp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(419, 330)]
}

[sub_resource type="Animation" id="Animation_7tiv6"]
resource_name = "rise"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(419, 746), Vector2(419, 330)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3tuu"]
_data = {
"RESET": SubResource("Animation_mjghp"),
"rise": SubResource("Animation_7tiv6")
}

[node name="ViewSheriff" type="Node2D"]
script = ExtResource("1_70v2j")

[node name="Main" type="Sprite2D" parent="."]
position = Vector2(576.465, 324.5)
scale = Vector2(3.81765, 3.81765)
texture = ExtResource("2_b6v87")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Walkie" type="Sprite2D" parent="."]
position = Vector2(831, 898)
rotation = 0.127409
scale = Vector2(7, 7)
texture = ExtResource("3_c25gc")
script = ExtResource("4_3x8v0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Walkie"]
libraries = {
"": SubResource("AnimationLibrary_0jkge")
}

[node name="Area2D" type="Area2D" parent="Walkie"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walkie/Area2D"]
visible = false
position = Vector2(0.213821, -0.25087)
shape = SubResource("RectangleShape2D_sy3nr")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="Dialog" parent="." instance=ExtResource("1_lj7xl")]

[node name="BackBufferCopy2" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="GlitchPlus" parent="." instance=ExtResource("10_5duty")]
visible = false
mouse_filter = 2

[node name="EndButtonExport" type="Button" parent="."]
visible = false
offset_left = 419.0
offset_top = 249.0
offset_right = 748.0
offset_bottom = 318.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_saxfb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i0f08")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6xx06")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3qef7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xjurt")
script = ExtResource("6_g8p5y")

[node name="Background" type="Sprite2D" parent="EndButtonExport"]
scale = Vector2(2.9115, 2.65385)
texture = ExtResource("7_pdjr6")
centered = false

[node name="Text" type="RichTextLabel" parent="EndButtonExport"]
layout_mode = 0
offset_top = 23.0
offset_right = 329.0
offset_bottom = 68.0
mouse_filter = 2
theme = ExtResource("7_c2jop")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "ENDING_BUTTON_EXPORT"

[node name="AudioClick" type="AudioStreamPlayer" parent="EndButtonExport"]
stream = ExtResource("8_fjtla")
volume_db = -25.0

[node name="AudioHover" type="AudioStreamPlayer" parent="EndButtonExport"]
stream = ExtResource("9_p6nk5")
volume_db = -25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="EndButtonExport"]
libraries = {
"": SubResource("AnimationLibrary_gnppy")
}

[node name="EndButtonLoad" type="Button" parent="."]
visible = false
offset_left = 419.0
offset_top = 330.0
offset_right = 748.0
offset_bottom = 399.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mau5j")
theme_override_styles/hover = SubResource("StyleBoxEmpty_285m2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yfxlm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1m137")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o1idm")
script = ExtResource("6_g8p5y")
type = 1

[node name="Background" type="Sprite2D" parent="EndButtonLoad"]
scale = Vector2(2.912, 2.654)
texture = ExtResource("12_jbx6p")
centered = false

[node name="Text" type="RichTextLabel" parent="EndButtonLoad"]
layout_mode = 0
offset_top = 23.0
offset_right = 312.0
offset_bottom = 68.0
mouse_filter = 2
theme = ExtResource("7_c2jop")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "ENDING_BUTTON_RESTART"

[node name="AudioClick" type="AudioStreamPlayer" parent="EndButtonLoad"]
stream = ExtResource("8_fjtla")
volume_db = -25.0

[node name="AudioHover" type="AudioStreamPlayer" parent="EndButtonLoad"]
stream = ExtResource("9_p6nk5")
volume_db = -25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="EndButtonLoad"]
libraries = {
"": SubResource("AnimationLibrary_a3tuu")
}
